<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="dp"
        android:layout_weight="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:clipToOutline="true">

        <TextView
            android:id="@+id/textPersonalData"
            android:layout_width="138dp"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/textPersonalData"
            android:textAppearance="@style/textViewStyle"
            android:lineSpacingExtra="0sp"
            android:gravity="center_vertical"
            />

        <View
            android:id="@+id/union"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/union_style"
            />

    </RelativeLayout>


    <EditText
        android:id="@+id/name"
        android:lineSpacingExtra="1sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:textSize="15sp"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_custom"
        android:textAppearance="@styles/text"
        />

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/surname"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/patronymic"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/patronymic"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"

        android:background="@drawable/edit_text_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/birth_date_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/birth_date_time"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"

        android:background="@drawable/edit_text_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/phone_number"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"

        android:background="@drawable/edit_text_custom"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:text="@string/register"/>

    </RelativeLayout>

</LinearLayout>